--- a/project/common/tests/msg-producer/pom.xml
+++ b/project/common/tests/msg-producer/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
