--- a/project/modules/es-helper/pom.xml
+++ b/project/modules/es-helper/pom.xml
@@ -22,19 +22,6 @@
             <artifactId>tools</artifactId>
             <version>0.0.1</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.elasticsearch.client</groupId>-->
-        <!--<artifactId>transport</artifactId>-->
-        <!--<version>5.0.0</version>-->
-        <!--<exclusions>-->
-        <!--<exclusion>-->
-        <!--<groupId>org.elasticsearch</groupId>-->
-        <!--<artifactId>elasticsearch</artifactId>-->
-        <!--</exclusion>-->
-        <!--</exclusions>-->
-        <!--</dependency>-->
-
-
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
@@ -88,6 +75,9 @@
             <artifactId>log4j-core</artifactId>
             <version>2.6.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
