--- a/project/common/tests/hello-logger/src/main/resources/log4j.properties
+++ b/project/common/tests/hello-logger/src/main/resources/log4j.properties
@@ -1,3 +1,5 @@
+beating.host=192.168.99.75
+beating.appid=hello002
 #\u65E5\u5FD7\u672C\u5730\u5B58\u653E\u76EE\u5F55\uFF0C\u672A\u4F7F\u7528
 logs.root.dir=/home/apps/logs
 #\u6839logger
