--- a/project/modules/logbase/pom.xml
+++ b/project/modules/logbase/pom.xml
@@ -171,6 +171,16 @@
             <groupId>com.hgt</groupId>
             <artifactId>tools</artifactId>
             <version>0.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
