--- a/project/modules/logbase/src/main/resources/application.properties
+++ b/project/modules/logbase/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #mysql
-spring.datasource.url=jdbc:mysql://123.206.29.126:3306/logbase
+spring.datasource.url=jdbc:mysql://192.168.99.253:3306/logbase
 spring.datasource.username=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/logbase
 #spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=admin
 spring.datasource.driver-class-dataContents=com.mysql.jdbc.Driver
 #tomcat server
 server.port=8702
