--- a/project/modules/msg-router/src/main/resources/application.properties
+++ b/project/modules/msg-router/src/main/resources/application.properties
@@ -4,5 +4,6 @@ server.port=8703
 topic=router
 spring.redis.database=0
 spring.redis.host=123.206.29.126
+#spring.redis.host=192.168.99.140
 spring.redis.password=
 spring.redis.port=6379
