--- a/project/modules/task-scheduler/pom.xml
+++ b/project/modules/task-scheduler/pom.xml
@@ -13,8 +13,15 @@
     <name>task-scheduler</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+        <spring.boot.version>1.3.6.RELEASE</spring.boot.version>
+        <mybatis.version>3.4.1</mybatis.version>
+        <mybatis-spring.version>1.3.0</mybatis-spring.version>
+        <jackson.version>2.6.7</jackson.version>
+        <druid.version>1.0.22</druid.version>
+        <mysql.jdbc.version>5.1.39</mysql.jdbc.version>
+        <junit.version>4.12</junit.version>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -35,6 +42,16 @@
             <groupId>com.hgt</groupId>
             <artifactId>tools</artifactId>
             <version>0.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--spring-boot基础jar-->
         <dependency>
