--- a/project/modules/task-scheduler/pom.xml
+++ b/project/modules/task-scheduler/pom.xml
@@ -155,7 +155,26 @@
             <version>${jackson.version}</version>
         </dependency>
         <!-- JSON end -->
+        <!-- 用于加密转二进制 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
 
+
+        <!--Swagger start方便生成spring restful风格的接口文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <!--Swagger end-->
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
             <!--<artifactId>junit</artifactId>-->
